--- a/paper/references.bib
+++ b/paper/references.bib
@@ -119,7 +119,8 @@
   journal={Biometrics},
   pages={803--821},
   year={1993},
-  publisher={JSTOR}
+  volume={49},
+  number={3}
 }
 
 @article{baumer2023big,
@@ -233,7 +234,7 @@
   number = {1},
   journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
   publisher = {Oxford University Press (OUP)},
-  author = {Dempster,  A. P. and Laird,  N. M. and Rubin,  D. B.},
+  author = {Dempster, Arthur P. and Laird, Nan M. and Rubin, Donald B.},
   year = {1977},
   pages = {1--22}
 }
