--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -29,7 +29,7 @@ bibliography: references.bib
 abstract: |
   | Player tracking data have provided great opportunities to generate novel insights into understudied areas of American football, such as pre-snap motion. Using a Bayesian multilevel model, we provide an assessment of a quarterback's ability to adapt and align the ball snap with pre-snap motion from their teammates. We focus on pass plays with receivers in motion at snap and running a route, and define the snap timing as the time between the start of the receiver’s motion and the ball snap. We assume a Gamma distribution for the play-level snap timing and model the mean parameter with player and team random effects, along with relevant fixed effects such as the motion type identified via a Gaussian mixture model. Most importantly, we model the shape parameter with quarterback random effects, which enables us to estimate the differences in snap timing variability among NFL quarterbacks. We demonstrate that higher variability in snap timing is beneficial for the passing game, as it relates to facing less havoc created by the opposing defense. We also obtain a quarterback leaderboard based on our snap timing variability measure, and Patrick Mahomes stands out as the top rated player.
   |
-  | *Keywords:* Bayesian statistics, multilevel model, uncertainty quantification, tracking data, American football
+  | *Keywords:* Bayesian statistics, multilevel model, National Football League, tracking data, uncertainty quantification
 header-includes:
   \usepackage[scaled=0.98]{inconsolata}
   \usepackage{float}
@@ -571,9 +571,9 @@ Additionally, the QB ranking at the mean level in Figure \ref{fig:fig_qb_mean_po
 Hence, a quarterback can be consistent or variable with managing snap timing, and this does not necessarily depend on the duration of the snap timing itself on average.
 
 Next, Figure \ref{fig:fig_receiver_posterior_distributions} shows the posterior distributions for the motion player random effect $b_m$ for those in motion 20 times or more across the motion plays in our final sample.
-We notice that Stefon Diggs and Tyreek Hill are the top two receivers in terms of their posterior mean values.
-These are two of the most elite wide receivers in 2022, with Tyreek Hill especially being known for his lightning-quick running speed and was part of the electric 2022 Miami Dolphins offense.
-Thus, at first glance, one could suspect that these estimates are indicative of receiver quickness and agility to some degree.
+We notice that Stefon Diggs and Tyreek Hill are the top two players in terms of their posterior mean values.
+These are two of the most elite wide receivers in 2022, with Tyreek Hill especially known for his lightning-fast speed on the football field and was part of the electric 2022 Miami Dolphins offense.
+Thus, at first glance, one could suspect that these estimates are indicative of receiver speed and agility to some degree.
 
 However, in each of Figures \ref{fig:fig_qb_mean_posterior_distributions} and \ref{fig:fig_receiver_posterior_distributions}, we notice an overlap between the 95% credible intervals for the top and bottom players.
 Therefore, unlike the variability in QB snap timing, our estimates when modeling the mean $\mu$ for both quarterbacks and motion players do not appear to differentiate between players.
